--- a/zaffy_webapp/index.html
+++ b/zaffy_webapp/index.html
@@ -2,14 +2,14 @@
 <!-- saved from url=(0046)http://jugas.html.themeforest.createit.pl/zoe/ -->
 <html class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths desktop portrait" lang="en" style=""><!--<![endif]--><head lang="en"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
-    <meta name="description" content="Jugas - Creative HTML Template">
-    <meta name="author" content="CreateIT">
+    <meta name="description" content="Zaffy Life">
+    <meta name="author" content="zaffy">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <title>JuGas - HTML Template</title>
+    <title>Zaffy Life</title>
 
-    <link rel="shortcut icon" href="http://jugas.html.themeforest.createit.pl/zoe/assets/images/demo-content/icon.ico">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
 
@@ -25,62 +25,7 @@
 
 <div class="ct-preloader animated fadeOut" style="display: none; z-index: -9999;"><div class="ct-preloader-content animated fadeOut"></div></div>
 
- <button type="button" class="navbar-toggle ct-menuMobile-toggle">
-    <span class="sr-only">Toggle navigation</span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-</button>
-
-<div class="ct-menuMobile">
-    <ul class="ct-menuMobile-navbar">
-        <li><a href="http://jugas.html.themeforest.createit.pl/zoe/index.html">Home</a></li>
-        <!-- =========================== -->
-        <li class="dropdown"><a class="dropdown-toggle" href="http://jugas.html.themeforest.createit.pl/zoe/about.html">Pages</a>
-            <ul class="dropdown-menu">
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/about.html">About</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/services.html">Services</a></li>
- 				<li><a href="http://jugas.html.themeforest.createit.pl/zoe/our-process.html">Process</a></li>
-             </ul>
-        </li>
-        <!-- =========================== -->
-        <li class="dropdown"><a class="dropdown-toggle" href="http://jugas.html.themeforest.createit.pl/zoe/works-4-col.html">Portfolio</a>
-            <ul class="dropdown-menu">
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-3-col.html">Full Width 3 Columns</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-4-col.html">Full Width 4 Columns</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-5-col.html">Full Width 5 Columns</a></li>
-
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-boxed-2-col.html">Boxed 2 Columns</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-boxed-3-col.html">Boxed 3 Columns</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-boxed-4-col.html">Boxed 4 Columns</a></li>
-
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/single-work-fullWidth.html">Single Work - Full Width</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/single-work-boxed.html">Single Work - Boxed</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/single-work-video.html">Single Work - Video</a></li>
-
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-sorting-boxed.html">Sorting Boxed</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-sorting-full.html">Sorting Full Width</a></li>
-            </ul>
-        </li>
-        <!-- =========================== -->
-        <li class="dropdown"><a class="dropdown-toggle" href="http://jugas.html.themeforest.createit.pl/zoe/blog-boxed-2-col.html">Blog</a>
-            <ul class="dropdown-menu">
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/blog-boxed-1-col.html">Blog Standard</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/blog-sidebar-1-col.html">Blog with Sidebar</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/blog-boxed-2-col.html">Blog Text Right</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/blog-boxed-3-col.html">Blog 3 Columns</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/blog-boxed-4-col.html">Blog Masonry</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/post-standard.html">Standard Post</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/post-video.html">Video Post</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/post-quote.html">Quote Post</a></li>
-                <li><a href="http://jugas.html.themeforest.createit.pl/zoe/post-link.html">Link Post</a></li>
-            </ul>
-        </li>
-        <!-- =========================== -->
-
-        <li><a href="http://jugas.html.themeforest.createit.pl/zoe/contact.html">Contact</a></li>
-    </ul>
-</div>
+ 
 
 <div id="ct-js-wrapper" class="ct-pageWrapper">
 <!--:mobile navbar: -->
@@ -102,128 +47,14 @@
     </div>
 </div>
 
-<nav class="navbar navbar-default ct-navbar--type2">
-
-    <div class="navbar-header">
-        <a href="http://jugas.html.themeforest.createit.pl/zoe/index.html">
-            <img id="ct-navbar--logoDark" src="./assets/fancylogo.png" alt="JuGas">
-            <img id="ct-navbar--logoWhite" src="./assets/fancylogo2.png" alt="JuGas">
-        </a>
-    </div>
-
-    <div class="container-fluid">
-
-        <ul class="nav navbar-nav yamm ct-navbar--fadeIn">
-            <!-- =========================== -->
-            <li class="active"><a href="http://jugas.html.themeforest.createit.pl/zoe/index.html">Home</a></li>
-            <!-- =========================== -->
-            <li class="dropdown"><a class="dropdown-toggle" href="http://jugas.html.themeforest.createit.pl/zoe/about.html">Pages</a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <div class="yamm-content">
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <ul class="list-unstyled">
-                                        <li><a href="http://jugas.html.themeforest.createit.pl/zoe/about.html">About</a></li>
-                                        <li><a href="http://jugas.html.themeforest.createit.pl/zoe/services.html">Services</a></li>
-                                        <li><a href="http://jugas.html.themeforest.createit.pl/zoe/our-process.html">Process</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </li>
-            <!-- =========================== -->
-            <li class="dropdown ct-dropdown"><a class="dropdown-toggle" href="http://jugas.html.themeforest.createit.pl/zoe/works-5-col.html">Portfolio</a>
-                <ul class="dropdown-menu">
-                    <!-- ================================ -->
-                    <li class="dropdown"><a class="dropdown-toggle" href="http://jugas.html.themeforest.createit.pl/zoe/single-work-fullWidth.html">Full-Width</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-3-col.html">3 Columns</a></li>
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-4-col.html">4 Columns</a></li>
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-5-col.html">5 Columns</a></li>
-                        </ul>
-                    </li>
-                    <!-- ================================ -->
-                    <li class="dropdown"><a class="dropdown-toggle" href="http://jugas.html.themeforest.createit.pl/zoe/single-work-fullWidth.html">Boxed</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-boxed-2-col.html">2 Columns</a></li>
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-boxed-3-col.html">3 Columns</a></li>
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-boxed-4-col.html">4 Columns</a></li>
-                        </ul>
-                    </li>
-                    <!-- ================================ -->
-                    <li class="dropdown"><a class="dropdown-toggle" href="http://jugas.html.themeforest.createit.pl/zoe/single-work-fullWidth.html">Single Work</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/single-work-fullWidth.html">Single Work - Full Width</a></li>
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/single-work-boxed.html">Single Work - Boxed</a></li>
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/single-work-video.html">Single Work - Video</a></li>
-                        </ul>
-                    </li>
-                    <!-- ================================ -->
-                    <li class="dropdown"><a class="dropdown-toggle" href="http://jugas.html.themeforest.createit.pl/zoe/single-work-fullWidth.html">with Sorting</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-sorting-boxed.html">Boxed 3 Columns</a></li>
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/works-sorting-full.html">Full Width 5 Columns</a></li>
-                        </ul>
-                    </li>
-                    <!-- ================================ -->
-                </ul>
-            </li>
-            <!-- =========================== -->
-            <li class="dropdown ct-dropdown"><a class="dropdown-toggle" href="http://jugas.html.themeforest.createit.pl/zoe/blog-boxed-1-col.html">Blog</a>
-                <ul class="dropdown-menu">
-                    <!-- ================================ -->
-                    <li><a href="http://jugas.html.themeforest.createit.pl/zoe/blog-boxed-1-col.html">Blog Standard</a></li>
-                    <li><a href="http://jugas.html.themeforest.createit.pl/zoe/blog-sidebar-1-col.html">Blog with Sidebar</a></li>
-                    <li><a href="http://jugas.html.themeforest.createit.pl/zoe/blog-boxed-2-col.html">Blog Text Right</a></li>
-                    <li><a href="http://jugas.html.themeforest.createit.pl/zoe/blog-boxed-3-col.html">Blog 3 Columns</a></li>
-                    <li><a href="http://jugas.html.themeforest.createit.pl/zoe/blog-boxed-4-col.html">Blog Masonry</a></li>
-                    <!-- ================================ -->
-                    <li class="dropdown"><a class="dropdown-toggle" href="http://jugas.html.themeforest.createit.pl/zoe/blog-boxed-2-col.html">Single Posts</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/post-standard.html">Standard Post</a></li>
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/post-video.html">Video Post</a></li>
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/post-quote.html">Quote Post</a></li>
-                            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/post-link.html">Link Post</a></li>
-                        </ul>
-                    </li>
-                    <!-- ================================ -->
-                </ul>
-            </li>
-            <!-- =========================== -->
-            <li><a href="http://jugas.html.themeforest.createit.pl/zoe/contact.html">Contact</a></li>
-            <!-- =========================== -->
-            <li>
-                <a class="ct-js-navSearch ct-navbar-navSearch" href="http://jugas.html.themeforest.createit.pl/zoe/#">
-                    <i class="fa fa-search"></i>
-                </a>
-            </li>
-        </ul>
-        <div class="ct-navbar-search">
-            <form role="form">
-                <div class="form-group  ct-input--type2">
-
-                    <input id="search" required="" type="text" name="field[]" class="form-control">
-                    <label for="search"><span>Search</span></label>
-                    <button class="ct-navbar-search-button" type="submit">
-                        <i class="fa fa-search fa-fw"></i>
-                    </button>
-                </div>
-            </form>
-        </div>
-    </div>
-</nav>
-
 
 <div class="ct-mediaSection" data-height="410" data-type="color" style="min-height: 410px; height: 410px;">
     <div class="ct-mediaSection-inner">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-sm-offset-3 text-center">
-                    <h3 class="ct-u-colorWhite ct-u-marginTop0 ct-u-marginBottom60">We invite you to be one of the first to join the team.</h3>
-                    <a href="http://jugas.html.themeforest.createit.pl/zoe/#" class="btn btn-white ct-hover--icon-replace-left"><i class="fa fa-long-arrow-right"></i><span>View More</span></a>
+                    <h3 class="ct-u-colorWhite ct-u-marginTop0 ct-u-marginBottom60">Big Data + Fashion = Zaffy</h3>
+                    <a href="http://jugas.html.themeforest.createit.pl/zoe/#" class="btn btn-white ct-hover--icon-replace-left"><i class="fa fa-long-arrow-right"></i><span>Get</span></a>
                 </div>
             </div>
         </div>
