--- a/zaffy_webapp/index.html
+++ b/zaffy_webapp/index.html
@@ -206,10 +206,10 @@ angular.module("myapp", [])
 
         $scope.zaffys = [];
 
-        var DOMAIN = "http://127.0.0.1:8000/";
+        var DOMAIN = "52.0.238.94/";
 
         $scope.domain = DOMAIN;
-        var token = "4edf24ddd6df08337afe707d2218ba103068744f";
+        var token = "71e3dfdb47579116e5f0eef477b05cc6147d616a";
 
         var response =  $http({
                             url: DOMAIN + 'api/v1/zaffy/',
