--- a/zaffy_webapp/index.html
+++ b/zaffy_webapp/index.html
@@ -206,7 +206,7 @@ angular.module("myapp", [])
 
         $scope.zaffys = [];
 
-        var DOMAIN = "52.0.238.94/";
+        var DOMAIN = "http://52.0.238.94/";
 
         $scope.domain = DOMAIN;
         var token = "71e3dfdb47579116e5f0eef477b05cc6147d616a";
