--- a/zaffy_webapp/index.html
+++ b/zaffy_webapp/index.html
@@ -52,7 +52,7 @@
 
 
 <div class="container-fluid">
-    <div id="ct-gallery" class="ct-gallery ct-gallery--col4 ct-js-magnificPortfolioPopupGroup is-loaded" style="position: relative; height: 2154px;">
+    <div id="ct-gallery" class="ct-gallery ct-gallery--col4 ct-js-magnificPortfolioPopupGroup is-loaded" style="position: relative;">
 
         
 
