--- a/zaffy_webapp/index.html
+++ b/zaffy_webapp/index.html
@@ -188,7 +188,8 @@
 <script src="./assets/init(2).js"></script>
 
 <script src="./assets/less.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script> -->
+<script src="angular.min.js"></script>
 
 
 <!-- Datetime Picker -->
